--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,14 @@ repositories {
 }
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 26
     buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.adms.saralpay"
-        minSdkVersion 15
-        targetSdkVersion 26
-        versionCode 14
-        versionName "1.19021811"
+        minSdkVersion 19
+        targetSdkVersion 28
+        versionCode 15
+        versionName "1.20090115"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -33,6 +33,10 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    implementation project(":PGSDKVR4")
+
 //    compile files('libs/SmartCardLib.jar')
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/ccidlib-dev-v1.2.8 20160730.jar')
