--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.adms.saralpay">
-    //General permissions
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!--//required for Juspay to read the OTP from the SMS sent to the device-->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <!--<uses-permission android:name="android.permission.READ_SMS" />-->
-    <!--<uses-permission android:name="android.permission.RECEIVE_SMS" />-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- //required for Juspay to read the OTP from the SMS sent to the device -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> <!-- <uses-permission android:name="android.permission.READ_SMS" /> -->
+    <!-- <uses-permission android:name="android.permission.RECEIVE_SMS" /> -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -18,7 +18,9 @@
         android:icon="@mipmap/saralpay_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        tools:replace="android:icon"
         android:theme="@style/AppTheme">
+        <activity android:name=".TraknpayNewActivity" />
         <activity
             android:name=".LoginScreen"
             android:screenOrientation="portrait"
@@ -28,17 +30,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!--<receiver-->
-            <!--android:name=".BroadcastReceiver.IncomingSms"-->
-            <!--android:exported="true"-->
-            <!--android:permission="android.permission.BROADCAST_SMS">-->
-            <!--<intent-filter android:priority="5822">-->
-                <!--<action android:name="android.provider.Telephony.SMS_RECEIVED" />-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
-
+        </activity> <!-- <receiver -->
+        <!-- android:name=".BroadcastReceiver.IncomingSms" -->
+        <!-- android:exported="true" -->
+        <!-- android:permission="android.permission.BROADCAST_SMS"> -->
+        <!-- <intent-filter android:priority="5822"> -->
+        <!-- <action android:name="android.provider.Telephony.SMS_RECEIVED" /> -->
+        <!-- </intent-filter> -->
+        <!-- </receiver> -->
         <activity
             android:name=".MyProfileScreen"
             android:screenOrientation="portrait"
@@ -108,8 +107,11 @@
             android:name="com.scdroid.ccid.key"
             android:value="FF206D7C26F51F6CBDC7926D920B2E7E" />
 
-        <activity android:name=".Termsandcondition"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <activity android:name=".Termsandcondition" />
+        <!--
+ ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+        -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
