--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:icon="@mipmap/saralpay_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         tools:replace="android:icon"
         android:theme="@style/AppTheme">
         <activity android:name=".TraknpayNewActivity" />
